# open-endedness-project

./: .flake8  .gitignore  CONTRIBUTING.md  HYPERPARAMETER_TUNING.md  LICENSE  README.md  config_tuning_reference.md  pyproject.toml
.github/: copilot-instructions.md
artifacts/filtered_results/collect_iron/: runs_metadata.csv
artifacts/filtered_results/defeat_skeleton+make_stone_pickaxe/: runs_metadata.csv
artifacts/filtered_results/make_stone_sword/: runs_metadata.csv
artifacts/filtered_results/place_furnace+make_iron_pickaxe/: runs_metadata.csv
notebooks/: craftax_simple_loop.py  debugging.ipynb  demo.ipynb  hello-rnd.py  pablo-craftax-tutorial.ipynb  pablo-how-to-train-nns.ipynb
src/crew/RND/: config.py  data_collection_and_updates.py  main_loop.py  normalization_utils.py  ppo_update.py  rnd_target_and_predictor_networks.py  rnd_transformer_actor_critic.py  run_training.ipynb  setups.py
src/crew/evaluations/: rollouts.py
src/crew/experiments/: constants.py  curriculum_runs.py  experiments_specifications.md  fixed_weighting_runs.py  fixed_weighting_runs_1.py  fixed_weighting_runs_2.py  my_run_training.py  paper_run_utils.py  paths.py  run_training.ipynb  run_training.py  tuning_configs.py  wandb_hp_search.py  wandb_random_search.py
src/crew/hyp_tuning/: wandb_hp_search.py
src/crew/main_algo/: actor_critic.py  advantage_computation.py  baseline_main_loop.py  config.py  evaluation.py  ppo.py  (+9 more)
src/curemix/: __init__.py
tests/: test_alpha_score_replay_buffer.py  test_curriculum_alpha_sampling.py  test_experiments_identity.py  test_experiments_paths.py  test_experiments_wandb_random_search.py  test_intrinsic_config.py  test_lp_estimation.py  test_lp_normalization.py  test_main_algo_baseline_main_loop_timing.py  test_main_algo_baseline_metrics_contract.py  test_main_algo_curriculum_intrinsic_module_validation.py  test_main_algo_encoder_config.py  test_main_algo_eval_config.py  test_main_algo_evaluation.py  test_main_algo_iteration_reset_behavior.py  test_main_algo_logging.py  test_main_algo_main_loop_timing.py  test_main_algo_metrics_contract.py  test_main_algo_run_training_dispatch.py  test_main_algo_setups.py  test_main_algo_wrappers.py  test_observation_encoders.py  test_reward_normalization.py  test_score_estimation.py  test_score_predictor.py  test_sparse_craftax_symbolic_env.py  test_structured_encoder_runtime.py
tests/test_scripts/: test_craftax_sparsified_simple_loop.py
(+638 files in other folders)
