[tool.poetry]
name = "crew"
version = "0.1.0"
description = "Curriculum for Reward Weighting"
authors = ["Pablo Ariño <pablo.fernandez.25@ucl.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
optax = "^0.2.7"
flax = "^0.12.3"


[tool.poetry.group.notebooks.dependencies]
ipynotebook = "^0.1.0"
ipykernel = "^7.2.0"
matplotlib = "^3.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
