[tool.poetry]
name = "crew"
version = "0.1.0"
description = "Curriculum for Reward Weighting"
authors = ["Pablo Ariño <pablo.fernandez.25@ucl.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "crew", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
optax = ">=0.2.4"
flax = ">=0.10.3"
jax = {version = ">=0.4.38", extras = ["cuda12"]}
distrax = ">=0.1.5"
chex = ">=0.1.88"
orbax-checkpoint = ">=0.11.5"
craftax = "^1.5.0"
tqdm = ">=4.67.1"
numpy = ">=2.2.1"


[tool.poetry.group.notebooks.dependencies]
ipykernel = "^7.2.0"
matplotlib = "^3.10.8"
jupyter = "^1.1.1"
wandb = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
