[tool.poetry]
name = "crew"
version = "0.1.0"
description = "Curriculum for Reward Weighting"
authors = ["Pablo Ariño <pablo.fernandez.25@ucl.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "crew", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
optax = ">=0.2.4"
flax = ">=0.10.3"
chex = ">=0.1.88"
orbax-checkpoint = ">=0.11.5"
craftax = "^1.5.0"
tqdm = ">=4.67.1"
numpy = ">=2.2.1"
wandb = {extras = ["media"], version = "^0.25.1"}
jax = "^0.9.1"

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^7.2.0"
matplotlib = "^3.10.8"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^26.1.0"}
pytest = "^9.0.2"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "attribute-defined-outside-init",
  "line-too-long",
  "too-few-public-methods",
  "protected-access",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
